--- a/templates/pwademo/base.html
+++ b/templates/pwademo/base.html
@@ -21,5 +21,15 @@
   <script src="https://unpkg.com/hyperscript.org@0.9.8"></script>
   <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.3.3/dist/htmx.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", function() {
+        navigator.serviceWorker
+          .register("/static/sw.js")
+          .then(res => console.log("service worker registered"))
+          .catch(err => console.log("service worker not registered", err))
+      })
+    }
+  </script>
 </body>
 </html>
