--- a/templates/pwademo/base.html
+++ b/templates/pwademo/base.html
@@ -25,7 +25,7 @@
     if ("serviceWorker" in navigator) {
       window.addEventListener("load", function() {
         navigator.serviceWorker
-          .register("/static/sw.js")
+          .register("/sw.js")
           .then(res => console.log("service worker registered"))
           .catch(err => console.log("service worker not registered", err))
       })
